force-app/main/default/objects/OpenAISettings__c/OpenAISettings__c.object-meta.xml
<CustomObject>
    <label>OpenAISettings</label>
    <nameField>
        <label>OpenAI Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpenAISettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>