force-app/main/default/objects/OpenAISettings__c/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>Base URL</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>/v1/completions</fullName>
                <default>true</default>
                <label>/v1/completions</label>
            </value>
            <value>
                <fullName>/v1/chat/completions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>