force-app/main/default/objects/OpenAISettings__c/fields/ChatHistory__c.field-meta.xml
<CustomField>
    <fullName>ChatHistory__c</fullName>
    <label>Chat History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>