force-app/main/default/objects/OpenAISettings__c/fields/DateToDeleteChatHistory__c.field-meta.xml
<CustomField>
    <fullName>DateToDeleteChatHistory__c</fullName>
    <label>Date To Delete Chat History</label>
    <type>Date</type>
</CustomField>