force-app/main/default/objects/OpenAISettings__c/fields/LengthOfDaysToKeepHistory__c.field-meta.xml
<CustomField>
    <fullName>LengthOfDaysToKeepHistory__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Length Of Days To Keep History</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>