force-app/main/default/objects/OpenAISettings__c/fields/MaxTokenSize__c.field-meta.xml
<CustomField>
    <fullName>MaxTokenSize__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Max Token Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>