force-app/main/default/objects/OpenAISettings__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BaseURL__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text-davinci-003</fullName>
                <default>true</default>
                <label>text-davinci-003</label>
            </value>
            <value>
                <fullName>text-davinci-002</fullName>
            </value>
            <value>
                <fullName>text-curie-001</fullName>
            </value>
            <value>
                <fullName>text-babbage-001</fullName>
            </value>
            <value>
                <fullName>text-ada-001</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo-0613</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo-16k</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo-16k-0613</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>