force-app/main/default/objects/OpenAISettings__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Temperature</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>