force-app/main/default/objects/OpenAISettings__c/validationRules/Temperature_could_use_between_0_and_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Temperature_could_use_between_0_and_2</fullName>
    <active>true</active>
    <errorConditionFormula>Temperature__c &lt; 0 &amp;&amp;  Temperature__c  &gt; 2</errorConditionFormula>
    <errorMessage>The value of Temperature must be between 0 and 2</errorMessage>
</ValidationRule>